--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -1,22 +1,20 @@
 name:           wikirick
 version:        0.1
-synopsis:       Project Synopsis Here
-description:    Project Description Here
-license:        AllRightsReserved
-author:         Author
-maintainer:     maintainer@example.com
+synopsis:       A Wiki software.
+description:    A Wiki software.
+license:        BSD3
+author:         Keita Mizuochi
+maintainer:     mizon9@gmail.com
 stability:      Experimental
 category:       Web
 build-type:     Simple
-cabal-version:  >= 1.2
+cabal-version:  >= 1.10
 
 flag development
   description: Whether to build the server in development (interpreted) mode
   default: False
 
 executable wikirick
-  hs-source-dirs: src
-  main-is: Main.hs
   build-depends:
     MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
     base                        >= 4.4 && < 5,
@@ -34,6 +32,9 @@ executable wikirick
   default-extensions:
     OverloadedStrings,
     TemplateHaskell
+  default-language: Haskell2010
+  hs-source-dirs: src
+  main-is: Main.hs
   if flag(development)
     build-depends:
       snap-loader-dynamic == 0.10.*
