--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -17,6 +17,7 @@ flag development
 executable wikirick
   build-depends:
     MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
+    aeson                       >= 0.6,
     base                        >= 4.4 && < 5,
     bytestring                  >= 0.9.1 && < 0.11,
     heist                       >= 0.12 && < 0.13,
@@ -42,3 +43,35 @@ executable wikirick
     ghc-options: -threaded -w
   else
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -fno-warn-orphans
+
+test-suite unit-test
+  build-depends:
+    containers                  >= 0.5,
+    hspec                       >= 1.7,
+
+    MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
+    aeson                       >= 0.6,
+    base                        >= 4.4 && < 5,
+    bytestring                  >= 0.9.1 && < 0.11,
+    heist                       >= 0.12 && < 0.13,
+    lens                        >= 3.7.6 && < 3.10,
+    mtl                         >= 2 && < 3,
+    snap                        >= 0.11 && < 0.13,
+    snap-core                   >= 0.9 && < 0.11,
+    snap-loader-static          >= 0.9 && < 0.10,
+    snap-server                 >= 0.9 && < 0.11,
+    text                        >= 0.11 && < 0.12,
+    time                        >= 1.1 && < 1.5,
+    xmlhtml                     >= 0.1
+  default-extensions:
+    FlexibleContexts,
+    FlexibleInstances,
+    OverloadedStrings,
+    RankNTypes,
+    ScopedTypeVariables,
+    TemplateHaskell
+  default-language: Haskell2010
+  ghc-options: -Wall
+  hs-source-dirs: src, spec
+  main-is: SpecMain.hs
+  type: exitcode-stdio-1.0
