--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -31,7 +31,13 @@ executable wikirick
     time                        >= 1.1 && < 1.5,
     xmlhtml                     >= 0.1
   default-extensions:
+    DeriveDataTypeable,
+    FlexibleContexts,
+    FlexibleInstances,
+    NoMonomorphismRestriction,
     OverloadedStrings,
+    RankNTypes,
+    ScopedTypeVariables,
     TemplateHaskell
   default-language: Haskell2010
   hs-source-dirs: src
@@ -64,8 +70,10 @@ test-suite unit-test
     time                        >= 1.1 && < 1.5,
     xmlhtml                     >= 0.1
   default-extensions:
+    DeriveDataTypeable,
     FlexibleContexts,
     FlexibleInstances,
+    NoMonomorphismRestriction,
     OverloadedStrings,
     RankNTypes,
     ScopedTypeVariables,
