--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -34,6 +34,7 @@ executable wikirick
     DeriveDataTypeable,
     FlexibleContexts,
     FlexibleInstances,
+    LambdaCase,
     NoMonomorphismRestriction,
     OverloadedStrings,
     RankNTypes,
@@ -73,6 +74,7 @@ test-suite unit-test
     DeriveDataTypeable,
     FlexibleContexts,
     FlexibleInstances,
+    LambdaCase,
     NoMonomorphismRestriction,
     OverloadedStrings,
     RankNTypes,
