--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -20,7 +20,10 @@ executable wikirick
     aeson                       >= 0.6,
     base                        >= 4.4 && < 5,
     bytestring                  >= 0.9.1 && < 0.11,
+    data-default                >= 0.5,
+    filepath                    >= 1.3,
     heist                       >= 0.12 && < 0.13,
+    io-streams                  >= 0.11,
     lens                        >= 3.7.6 && < 3.10,
     mtl                         >= 2 && < 3,
     snap                        >= 0.11 && < 0.13,
@@ -60,7 +63,10 @@ test-suite unit-test
     aeson                       >= 0.6,
     base                        >= 4.4 && < 5,
     bytestring                  >= 0.9.1 && < 0.11,
+    data-default                >= 0.5,
+    filepath                    >= 1.3,
     heist                       >= 0.12 && < 0.13,
+    io-streams                  >= 0.11,
     lens                        >= 3.7.6 && < 3.10,
     mtl                         >= 2 && < 3,
     snap                        >= 0.11 && < 0.13,
