--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -18,9 +18,11 @@ executable wikirick
   build-depends:
     MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
     aeson                       >= 0.6,
+    attoparsec                  >= 0.10,
     base                        >= 4.4 && < 5,
     bytestring                  >= 0.9.1 && < 0.11,
     data-default                >= 0.5,
+    directory                   >= 1.2,
     filepath                    >= 1.3,
     heist                       >= 0.12 && < 0.13,
     io-streams                  >= 0.11,
@@ -57,13 +59,15 @@ executable wikirick
 test-suite unit-test
   build-depends:
     containers                  >= 0.5,
-    hspec                       >= 1.7,
+    hspec                       >= 1.7.2,
 
     MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
     aeson                       >= 0.6,
+    attoparsec                  >= 0.10,
     base                        >= 4.4 && < 5,
     bytestring                  >= 0.9.1 && < 0.11,
     data-default                >= 0.5,
+    directory                   >= 1.2,
     filepath                    >= 1.3,
     heist                       >= 0.12 && < 0.13,
     io-streams                  >= 0.11,
