--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -60,6 +60,7 @@ test-suite unit-test
   build-depends:
     containers                  >= 0.5,
     hspec                       >= 1.7.2,
+    lens-time                   >= 0.1,
 
     MonadCatchIO-transformers   >= 0.2.1 && < 0.4,
     aeson                       >= 0.6,
@@ -73,6 +74,7 @@ test-suite unit-test
     io-streams                  >= 0.11,
     lens                        >= 3.7.6 && < 3.10,
     mtl                         >= 2 && < 3,
+    old-locale                  >= 1.0,
     snap                        >= 0.11 && < 0.13,
     snap-core                   >= 0.9 && < 0.11,
     snap-loader-static          >= 0.9 && < 0.10,
