--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -21,6 +21,7 @@ executable wikirick
     attoparsec                  >= 0.10,
     base                        >= 4.4 && < 5,
     bytestring                  >= 0.9.1 && < 0.11,
+    concurrent-extra            >= 0.7.0.6,
     data-default                >= 0.5,
     directory                   >= 1.2,
     filepath                    >= 1.3,
@@ -28,6 +29,7 @@ executable wikirick
     io-streams                  >= 0.11,
     lens                        >= 3.7.6 && < 3.10,
     mtl                         >= 2 && < 3,
+    old-locale                  >= 1.0,
     snap                        >= 0.11 && < 0.13,
     snap-core                   >= 0.9 && < 0.11,
     snap-loader-static          >= 0.9 && < 0.10,
@@ -67,6 +69,7 @@ test-suite unit-test
     attoparsec                  >= 0.10,
     base                        >= 4.4 && < 5,
     bytestring                  >= 0.9.1 && < 0.11,
+    concurrent-extra            >= 0.7.0.6,
     data-default                >= 0.5,
     directory                   >= 1.2,
     filepath                    >= 1.3,
