--- a/wikirick.cabal
+++ b/wikirick.cabal
@@ -25,12 +25,13 @@ executable wikirick
     data-default                >= 0.5,
     directory                   >= 1.2,
     filepath                    >= 1.3,
-    heist                       >= 0.12 && < 0.13,
+    heist                       >= 0.13 && < 0.14,
     io-streams                  >= 0.11,
     lens                        >= 3.7.6 && < 3.10,
     mtl                         >= 2 && < 3,
     old-locale                  >= 1.0,
-    snap                        >= 0.11 && < 0.13,
+    placeholders                >= 0.1,
+    snap                        >= 0.13 && < 0.14,
     snap-core                   >= 0.9 && < 0.11,
     snap-loader-static          >= 0.9 && < 0.10,
     snap-server                 >= 0.9 && < 0.11,
@@ -73,12 +74,13 @@ test-suite unit-test
     data-default                >= 0.5,
     directory                   >= 1.2,
     filepath                    >= 1.3,
-    heist                       >= 0.12 && < 0.13,
+    heist                       >= 0.13 && < 0.14,
     io-streams                  >= 0.11,
     lens                        >= 3.7.6 && < 3.10,
     mtl                         >= 2 && < 3,
     old-locale                  >= 1.0,
-    snap                        >= 0.11 && < 0.13,
+    placeholders                >= 0.1,
+    snap                        >= 0.13 && < 0.14,
     snap-core                   >= 0.9 && < 0.11,
     snap-loader-static          >= 0.9 && < 0.10,
     snap-server                 >= 0.9 && < 0.11,
